# Transmitivity

./: .gitignore  README.md
Server2/: Cargo.toml  Rocket.toml
Server2/src/: main.rs
Server2/templates/: admin.hbs  index.hbs  ip.hbs
ServerLib/ServerLibr/: GoogleImagesDownloader.cs  MyClass.cs  project.json
ServerLib/ServerLibr/Properties/: AssemblyInfo.cs
Transmitivity/Assets/: DomeScene.unity
Transmitivity/Assets/HoloToolkit/Input/Prefabs/: MixedRealityCameraParent.prefab
Transmitivity/Assets/Images/Dome/Materials/: Wende.mat
Transmitivity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
assets/dome/: wordlist.toml
